syntax = "proto3";
package benchgrpc;

service MemTSDB {
    rpc Fetch(FetchRequest) returns (FetchResult);
    rpc FetchStream(stream FetchRequest) returns (stream FetchResult);
    rpc FetchBatch(FetchBatchRequest) returns (FetchBatchResult);
    rpc FetchBatchStream(stream FetchBatchRequest) returns (stream FetchBatchResult);
}

message FetchRequest {
    int64 startUnixMs = 1;
    int64 endUnixMs = 2;
    string id = 3;
}

message FetchResult {
    message Segment {
        bytes value = 1;
    }

    repeated Segment segments = 1;
}

message FetchBatchRequest {
    int64 startUnixMs = 1;
    int64 endUnixMs = 2;
    repeated string ids = 3;
}

message FetchBatchResult {
    repeated FetchResult results = 1;
}
